Basic hookup. Needs module setup fixes from before.